WIP Popups, loader stuck fix

--- a/src/styles/production/ui/_loader.scss
+++ b/src/styles/production/ui/_loader.scss
@@ -10,7 +10,6 @@
 	width: 100%;
 	height: 100%;
 
-	pointer-events: all;
 
 	background-color: rgba(0,0,0,0.75);
 
@@ -19,7 +18,11 @@
 	align-items: center;
 
 	opacity: 0;
-	visibility: hidden;
+	transition: opacity 0.3s ease-in-out;
+
+	&, * {
+		pointer-events: none;
+	}
 
 	svg {
 		color: var(--blue-0);
@@ -27,6 +30,10 @@
 	}
 }
 
-// .loader-active .loader {
-	
-// }
+.loader-active .loader {
+	opacity: 1;
+
+	&, * {
+		pointer-events: all;
+	}
+}
