--- a/src/styles/production/ui/popups/_popups.scss
+++ b/src/styles/production/ui/popups/_popups.scss
@@ -1,5 +1,7 @@
 
 .popups {
+	z-index: $css2DIndex;
+
 	overflow: hidden;
 	
 	position: absolute;
